core/codegen/tests/ui-fail-stable/from_form_type_errors.stderr
error[E0277]: the trait bound `Unknown: FromFormField<'_>` is not satisfied
 --> tests/ui-fail-stable/from_form_type_errors.rs:7:12
  |
7 |     field: Unknown,
  |            ^^^^^^^ unsatisfied trait bound
  |
help: the trait `FromFormField<'_>` is not implemented for `Unknown`
 --> tests/ui-fail-stable/from_form_type_errors.rs:3:1
  |
3 | struct Unknown;
  | ^^^^^^^^^^^^^^
  = help: the following other types implement trait `FromFormField<'v>`:
            &'v [u8]
            &'v str
            Capped<&'v [u8]>
            Capped<&'v str>
            Capped<Cow<'v, str>>
            Capped<TempFile<'v>>
            Capped<std::string::String>
            Cow<'v, str>
          and $N others
  = note: required for `Unknown` to implement `FromForm<'r>`

error[E0277]: the trait bound `Unknown: FromFormField<'_>` is not satisfied
 --> tests/ui-fail-stable/from_form_type_errors.rs:5:10
  |
5 |   #[derive(FromForm)]
  |            ^-------
  |            |
  |  __________in this derive macro expansion
  | |
6 | | struct BadType3 {
  | |_______________^ unsatisfied trait bound
  |
help: the trait `FromFormField<'_>` is not implemented for `Unknown`
 --> tests/ui-fail-stable/from_form_type_errors.rs:3:1
  |
3 | struct Unknown;
  | ^^^^^^^^^^^^^^
  = help: the following other types implement trait `FromFormField<'v>`:
            &'v [u8]
            &'v str
            Capped<&'v [u8]>
            Capped<&'v str>
            Capped<Cow<'v, str>>
            Capped<TempFile<'v>>
            Capped<std::string::String>
            Cow<'v, str>
          and $N others
  = note: required for `Unknown` to implement `FromForm<'r>`
note: required because it appears within the type `_::FromFormGeneratedContext<'r>`
 --> tests/ui-fail-stable/from_form_type_errors.rs:6:8
  |
5 | #[derive(FromForm)]
  |          -------- in this derive macro expansion
6 | struct BadType3 {
  |        ^^^^^^^^
note: required by a bound in `rocket::form::FromForm::Context`
 --> $WORKSPACE/core/lib/src/form/from_form.rs
  |
  |     type Context: Send;
  |                   ^^^^ required by this bound in `FromForm::Context`
  = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo<usize>: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-stable/from_form_type_errors.rs:14:12
   |
14 |     field: Foo<usize>,
   |            ^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromFormField<'_>` is not implemented for `Foo<usize>`
  --> tests/ui-fail-stable/from_form_type_errors.rs:10:1
   |
10 | struct Foo<T>(T);
   | ^^^^^^^^^^^^^
   = help: the following other types implement trait `FromFormField<'v>`:
             &'v [u8]
             &'v str
             Capped<&'v [u8]>
             Capped<&'v str>
             Capped<Cow<'v, str>>
             Capped<TempFile<'v>>
             Capped<std::string::String>
             Cow<'v, str>
           and $N others
   = note: required for `Foo<usize>` to implement `FromForm<'r>`

error[E0277]: the trait bound `Foo<usize>: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-stable/from_form_type_errors.rs:12:10
   |
12 |   #[derive(FromForm)]
   |            ^-------
   |            |
   |  __________in this derive macro expansion
   | |
13 | | struct Other {
   | |____________^ unsatisfied trait bound
   |
help: the trait `FromFormField<'_>` is not implemented for `Foo<usize>`
  --> tests/ui-fail-stable/from_form_type_errors.rs:10:1
   |
10 | struct Foo<T>(T);
   | ^^^^^^^^^^^^^
   = help: the following other types implement trait `FromFormField<'v>`:
             &'v [u8]
             &'v str
             Capped<&'v [u8]>
             Capped<&'v str>
             Capped<Cow<'v, str>>
             Capped<TempFile<'v>>
             Capped<std::string::String>
             Cow<'v, str>
           and $N others
   = note: required for `Foo<usize>` to implement `FromForm<'r>`
note: required because it appears within the type `_::FromFormGeneratedContext<'r>`
  --> tests/ui-fail-stable/from_form_type_errors.rs:13:8
   |
12 | #[derive(FromForm)]
   |          -------- in this derive macro expansion
13 | struct Other {
   |        ^^^^^
note: required by a bound in `rocket::form::FromForm::Context`
  --> $WORKSPACE/core/lib/src/form/from_form.rs
   |
   |     type Context: Send;
   |                   ^^^^ required by this bound in `FromForm::Context`
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Unknown: FromFormField<'_>` is not satisfied
 --> tests/ui-fail-stable/from_form_type_errors.rs:5:10
  |
5 | #[derive(FromForm)]
  |          ^^^^^^^^ unsatisfied trait bound
  |
help: the trait `FromFormField<'_>` is not implemented for `Unknown`
 --> tests/ui-fail-stable/from_form_type_errors.rs:3:1
  |
3 | struct Unknown;
  | ^^^^^^^^^^^^^^
  = help: the following other types implement trait `FromFormField<'v>`:
            &'v [u8]
            &'v str
            Capped<&'v [u8]>
            Capped<&'v str>
            Capped<Cow<'v, str>>
            Capped<TempFile<'v>>
            Capped<std::string::String>
            Cow<'v, str>
          and $N others
  = note: required for `Unknown` to implement `FromForm<'r>`
  = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Unknown: FromForm<'r>` is not satisfied
 --> tests/ui-fail-stable/from_form_type_errors.rs:7:12
  |
7 |     field: Unknown,
  |            ^^^^^^^ unsatisfied trait bound
  |
help: the trait `FromFormField<'_>` is not implemented for `Unknown`
 --> tests/ui-fail-stable/from_form_type_errors.rs:3:1
  |
3 | struct Unknown;
  | ^^^^^^^^^^^^^^
  = help: the following other types implement trait `FromFormField<'v>`:
            &'v [u8]
            &'v str
            Capped<&'v [u8]>
            Capped<&'v str>
            Capped<Cow<'v, str>>
            Capped<TempFile<'v>>
            Capped<std::string::String>
            Cow<'v, str>
          and $N others
  = note: required for `Unknown` to implement `FromForm<'r>`

error[E0277]: the trait bound `Unknown: FromFormField<'_>` is not satisfied
 --> tests/ui-fail-stable/from_form_type_errors.rs:7:12
  |
5 | #[derive(FromForm)]
  |          -------- in this derive macro expansion
6 | struct BadType3 {
7 |     field: Unknown,
  |            ^^^^^^^ unsatisfied trait bound
  |
help: the trait `FromFormField<'_>` is not implemented for `Unknown`
 --> tests/ui-fail-stable/from_form_type_errors.rs:3:1
  |
3 | struct Unknown;
  | ^^^^^^^^^^^^^^
  = help: the following other types implement trait `FromFormField<'v>`:
            &'v [u8]
            &'v str
            Capped<&'v [u8]>
            Capped<&'v str>
            Capped<Cow<'v, str>>
            Capped<TempFile<'v>>
            Capped<std::string::String>
            Cow<'v, str>
          and $N others
  = note: required for `Unknown` to implement `FromForm<'r>`
  = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo<usize>: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-stable/from_form_type_errors.rs:12:10
   |
12 | #[derive(FromForm)]
   |          ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromFormField<'_>` is not implemented for `Foo<usize>`
  --> tests/ui-fail-stable/from_form_type_errors.rs:10:1
   |
10 | struct Foo<T>(T);
   | ^^^^^^^^^^^^^
   = help: the following other types implement trait `FromFormField<'v>`:
             &'v [u8]
             &'v str
             Capped<&'v [u8]>
             Capped<&'v str>
             Capped<Cow<'v, str>>
             Capped<TempFile<'v>>
             Capped<std::string::String>
             Cow<'v, str>
           and $N others
   = note: required for `Foo<usize>` to implement `FromForm<'r>`
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Foo<usize>: FromForm<'r>` is not satisfied
  --> tests/ui-fail-stable/from_form_type_errors.rs:14:12
   |
14 |     field: Foo<usize>,
   |            ^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromFormField<'_>` is not implemented for `Foo<usize>`
  --> tests/ui-fail-stable/from_form_type_errors.rs:10:1
   |
10 | struct Foo<T>(T);
   | ^^^^^^^^^^^^^
   = help: the following other types implement trait `FromFormField<'v>`:
             &'v [u8]
             &'v str
             Capped<&'v [u8]>
             Capped<&'v str>
             Capped<Cow<'v, str>>
             Capped<TempFile<'v>>
             Capped<std::string::String>
             Cow<'v, str>
           and $N others
   = note: required for `Foo<usize>` to implement `FromForm<'r>`

error[E0277]: the trait bound `Foo<usize>: FromFormField<'_>` is not satisfied
  --> tests/ui-fail-stable/from_form_type_errors.rs:14:12
   |
12 | #[derive(FromForm)]
   |          -------- in this derive macro expansion
13 | struct Other {
14 |     field: Foo<usize>,
   |            ^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `FromFormField<'_>` is not implemented for `Foo<usize>`
  --> tests/ui-fail-stable/from_form_type_errors.rs:10:1
   |
10 | struct Foo<T>(T);
   | ^^^^^^^^^^^^^
   = help: the following other types implement trait `FromFormField<'v>`:
             &'v [u8]
             &'v str
             Capped<&'v [u8]>
             Capped<&'v str>
             Capped<Cow<'v, str>>
             Capped<TempFile<'v>>
             Capped<std::string::String>
             Cow<'v, str>
           and $N others
   = note: required for `Foo<usize>` to implement `FromForm<'r>`
   = note: this error originates in the derive macro `FromForm` (in Nightly builds, run with -Z macro-backtrace for more info)
